--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.10.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
